Alphabetize and variable css and colors
Pull some theme colors out of css and into vars file.
Alphabetize css properties
Add projects scss file for project specific styling
Update projects data

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -19,6 +19,7 @@
 @import "theme/base";
 @import "theme/header";
 @import "theme/posts";
+@import "theme/projects";
 @import "theme/article";
 @import "theme/pagination";
 @import "theme/highlights";
