--- a/assets/scss/helpers/_vars.scss
+++ b/assets/scss/helpers/_vars.scss
@@ -9,24 +9,25 @@ $gray: #444;
 $gray-dark: #333;
 $black: #212121;
 
-$blue-link: #39f;
+$blue-flat: #589FF1;
+$blue-flat-hover: #67AAF7;
+$blue-flat-hover: saturate(lighten($blue-flat, 4), 7);
+$blue-flat-active: #569BEA;
+$blue-border: #4492EC;
+// $blue-border: #39f;
+
+$green-flat: #86df93;
+$green-flat-hover: saturate(lighten($green-flat, 4), 7);
+$green-flat-border: darken($green-flat, 6);
+$green-flat-dark: darken($green-flat, 25);
+
+
 $link-color: $gray;
-$link-color-hover: $blue-link;
-
-$green-flat: #1bbc9b;
-$blue-flat: #3498db;
-$teal-flat: #389ebc;
-$red-flat: #e96151;
-
-
-// Brand Colors
-$brand-colors: (
-	primary: $green-flat,
-	secondary: $blue-flat,
-	tertiary: $teal-flat,
-	quaternary: $red-flat
-);
+$link-color-hover: $blue-flat;
 
 $header-bg: $white;
-// $header-bg: map-get($brand-colors, primary);
+$posts-bg: $blue-flat;
+$posts-bg-hover: $blue-flat-hover;
+$posts-bg-active: $blue-flat-active;
+$posts-border-color: $blue-border;
 $fontello-color: $black;
