--- a/assets/scss/theme/_base.scss
+++ b/assets/scss/theme/_base.scss
@@ -3,8 +3,8 @@
  */
 
 html, body {
-	width: 100%;
 	height: 100%;
+	width: 100%;
 }
 
 html {
@@ -21,21 +21,26 @@ body {
 /* Viewport width < 920px */
 
 @media only screen and (max-width : 919px) {
-  body { font-size: 17px; }
+  body {
+	font-size: 17px;
+  }
 }
 
 /* Viewport width < 480px */
 @media only screen and (max-width : 479px) {
-  body { font-size: 15px; }
+  body {
+	font-size: 15px;
+  }
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: 'Dosis', sans-serif;
-	font-weight: 600;
 	color: $gray-dark;
+	font-weight: 600;
 }
 
-p, small, blockquote { -webkit-font-smoothing: antialiased; }
+p, small, blockquote {
+	-webkit-font-smoothing: antialiased;
+}
 
 a {
 	&:link,
@@ -54,8 +59,8 @@ a {
 	margin: 20px auto;
 	// margin: 0 auto;
 	max-width: 780px;
-	padding: 0 5%;
-	width: 100%;
+	// padding: 0 5%;
+	// width: 100%;
 }
 
 .page-content {
@@ -97,36 +102,31 @@ a {
 	width: 1px;
 }
 
-.nav{
-    list-style:none;
-    margin-left:0;
+.nav {
+	list-style: none;
+	margin-left: 0;
 
-    > li{
+	> li {
 
-        &,
-        > a{
-            display:inline-block;
-           *display:inline;
-            zoom:1;
-        }
-    }
+		&,
+		> a {
+			display: inline-block;
+		}
+	}
 }
 
-.nav--block{
-    line-height:1;
-    /**
-     * Remove whitespace caused by `inline-block`.
-     */
-    letter-spacing:-0.31em;
-    word-spacing:-0.43em;
-    white-space:nowrap;
+.nav--block {
+	letter-spacing: -0.31em;
+	line-height: 1;
+	white-space: nowrap;
+	word-spacing: -0.43em;
 
-    > li{
-        letter-spacing:normal;
-        word-spacing:normal;
+	> li{
+		letter-spacing: normal;
+		word-spacing: normal;
 
-        > a{
-            padding:10px;
-        }
-    }
+		> a{
+			padding: 10px;
+		}
+	}
 }
