--- a/assets/scss/theme/_highlights.scss
+++ b/assets/scss/theme/_highlights.scss
@@ -2,14 +2,14 @@
 /* highlights */
 
 .highlight {
+  background-color: #fbfbfb;
   border: 1px solid #eee;
   border-radius: 3px;
-  padding: 10px 25px;
-  background-color: #fbfbfb;
+  color: SlateGrey;
   font-size: 80%;
   margin: 60px 40px 40px;
   overflow: scroll;
-  color: SlateGrey;
+  padding: 10px 25px;
 }
 
 .highlight code {
@@ -17,8 +17,8 @@
 }
 
 .highlight code span {
-  line-height: 150%;
   font-size: 85%;
+  line-height: 150%;
 }
 
 .highlight code.html::before {
@@ -36,14 +36,14 @@
 .highlight code.html::before,
 .highlight code.css::before,
 .highlight code.js::before {
-  position: absolute;
-  color: #444;
-  margin-top: -42px;
-  font-family: 'Open Sans', sans-serif;
   background-color: #fbfbfb;
   border: 1px solid #eee;
-  padding: 4px 10px;
   border-radius: 3px 3px 0 0;
+  color: #444;
+  font-family: 'Open Sans', sans-serif;
+  margin-top: -42px;
+  padding: 4px 10px;
+  position: absolute;
 }
 
 
@@ -63,6 +63,6 @@
 
 @media only screen and (max-width : 479px) {
 
-  .highlight { padding: 10px 5px; margin: 30px 20px 40px; }
+  .highlight { margin: 30px 20px 40px; padding: 10px 5px; }
 
 }
