--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -18,9 +18,11 @@
 @import "theme/fontello";
 @import "theme/base";
 @import "theme/header";
+@import "theme/navigation";
 @import "theme/posts";
 @import "theme/projects";
 @import "theme/article";
 @import "theme/pagination";
 @import "theme/highlights";
 @import "theme/syntax";
+@import "theme/animations";
