--- a/_includes/head-slides.html
+++ b/_includes/head-slides.html
@@ -7,18 +7,20 @@
 	{{ page.title }} | {{ site.title }}
 </title>
 
-<!-- Core CSS -->
 <link href="{{ site.base_url }}assets/vendors/reveal/css/reveal.min.css" rel="stylesheet">
 <link href="{{ site.base_url }}assets/vendors/reveal/css/theme/beige.css" rel="stylesheet"><!-- default, beige, sky, night, serif, simple, solarized -->
 <link href="{{ site.base_url }}assets/vendors/highlight/styles/foundation.css" rel="stylesheet">
 <script src="{{ site.base_url }}assets/vendors/reveal/js/reveal.min.js"></script>
 
+{% comment %} Google Analytics {% endcomment %}
+{% if site.ga_tracking_id and site.ga_domain %}
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-42437510-1', 'nathanjessen.github.io');
+  ga('create', '{{ site.ga_tracking_id }}', '{{ site.ga_domain }}');
   ga('send', 'pageview');
 </script>
+{% endif %}
