--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,10 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/?locale=en/">upgrade your browser</a>. Your experience won't be effected on this site but upgrading your browser is always a great idea!</p>
     <![endif]-->
 
-    {% include header.html %}
 
     {{ content }}
 
+    {% include contact.html %}
     {% include footer.html %}
 
     <!-- JS and analytics only. -->
