--- a/_includes/head-slides.html
+++ b/_includes/head-slides.html
@@ -7,10 +7,10 @@
 	{{ page.title }} | {{ site.title }}
 </title>
 
-<link href="{{ site.base_url }}assets/vendors/reveal/css/reveal.min.css" rel="stylesheet">
-<link href="{{ site.base_url }}assets/vendors/reveal/css/theme/beige.css" rel="stylesheet"><!-- default, beige, sky, night, serif, simple, solarized -->
-<link href="{{ site.base_url }}assets/vendors/highlight/styles/foundation.css" rel="stylesheet">
-<script src="{{ site.base_url }}assets/vendors/reveal/js/reveal.min.js"></script>
+<link href="{{ site.base_url }}assets/css/reveal.css" rel="stylesheet">
+<link href="{{ site.base_url }}assets/css/beige.css" rel="stylesheet">
+<!-- <link href="{{ site.base_url }}assets/vendors/highlight/styles/foundation.css" rel="stylesheet"> -->
+<script src="{{ site.base_url }}assets/js/reveal.min.js"></script>
 
 {% comment %} Google Analytics {% endcomment %}
 {% if site.ga_tracking_id and site.ga_domain %}
