Restructure scss files and move up to root dir

--- a/_scss/components/_hero.scss
+++ b/_scss/components/_hero.scss
@@ -3,7 +3,7 @@ Hero
 ========================================================================== */
 
 .hero {
-    background: url('../img/hero-bg.jpg') no-repeat center center;
+    background: url('../assets/img/hero-bg.jpg') no-repeat center center;
     background-size: cover;
     height: auto;
     padding: 32px 0 150px 0;
