--- a/_scss/components/_index.scss
+++ b/_scss/components/_index.scss
@@ -7,6 +7,7 @@
 @import "iphone-section";
 @import "swag";
 @import "portfolio";
+@import "projects";
 @import "subscribe";
 @import "cta";
 @import "team";
