--- a/_scss/components/_intro.scss
+++ b/_scss/components/_intro.scss
@@ -11,7 +11,7 @@ Intro
 }
 
 h1.arrow {
-    background: url('../img/h1-bg.png') no-repeat center bottom;
+    background: url('../assets/img/h1-bg.png') no-repeat center bottom;
     color: #353535;
     font-size: 15px;
     font-weight: bold;
