--- a/_scss/components/_iphone-section.scss
+++ b/_scss/components/_iphone-section.scss
@@ -12,7 +12,7 @@ iPhone Section
 }
 
 .wp3 {
-    background: url('../img/iphone-bg.png') no-repeat 200px 10px;
+    background: url('../assets/img/iphone-bg.png') no-repeat 200px 10px;
     height: 100%;
 }
 
