--- a/_scss/components/_subscribe.scss
+++ b/_scss/components/_subscribe.scss
@@ -3,7 +3,7 @@ Subscribe
 ========================================================================== */
 
 .subscribe {
-    background: url('../img/plants-bg.jpg') no-repeat center center;
+    background: url('../assets/img/plants-bg.jpg') no-repeat center center;
     background-attachment: fixed;
     background-size: cover;
     padding: 120px 0 140px;
