Don't show header on homepage
Only show header on other pages since I want user to scroll down the
page.
Remove contact from default layout. Only place on homepage

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,11 +9,12 @@
     <![endif]-->
 
 
+    {% unless page.slug == "homepage" %}
     {% include header.html %}
+    {% endunless %}
 
     {{ content }}
 
-    {% include contact.html %}
     {% include footer.html %}
 
     <!-- JS and analytics only. -->
