--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -6,7 +6,7 @@ layout: default
 <section class="section-padding">
   <div class="container">
     <article class="row single-content" itemscope itemtype="http://schema.org/BlogPosting">
-      <div class="col-md-8 col-md-offset-2 animated fadeInLeft">
+      <div class="col-md-8 col-md-offset-2">
         <div class="feat">
           <h5 class="page-date">
             <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
