--- a/css/main.scss
+++ b/css/main.scss
@@ -7,45 +7,47 @@
  * sass --watch main.scss:main.min.css --style compressed
  */
 
-
-
 /////////////////////////////
 // Helpers
 /////////////////////////////
-@import "helpers/index";
-
+// @import "root";
+@import "vars";
 
 /////////////////////////////
 // Vendor Libraries
 /////////////////////////////
-@import "helpers/lib";
-
-
-/////////////////////////////
-// Base
-/////////////////////////////
-@import "base/index";
-
-
-/////////////////////////////
-// Layout
-/////////////////////////////
-@import "layout/index";
-
+@import "bootstrap";
+@import "bootstrap-theme";
+@import "flexslider";
+@import "slick";
+@import "normalize";
 
 /////////////////////////////
 // Components
 /////////////////////////////
-@import "components/index";
+@import "global";
+@import "navigation";
+@import "hero";
+@import "intro";
+@import "features";
+@import "iphone-section";
+@import "swag";
+@import "portfolio";
+@import "projects";
+@import "subscribe";
+@import "cta";
+@import "team";
+@import "contact";
+@import "footer";
+@import "posts";
+@import "waypoints";
+@import "queries";
 
 
 /////////////////////////////
 // Theme
 /////////////////////////////
-// @import "theme/index";
-
-
-/////////////////////////////
-// States
-/////////////////////////////
-@import "states/index";
+@import "fontello";
+@import "highlights";
+@import "syntax";
+@import "animations";
