--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,31 +1,29 @@
 <section class="portfolio text-center section-padding" id="portfolio">
   <div class="container">
     <div class="row">
-      <div id="portfolioSlider">
-        {% for project in site.projects reversed %}
-        {% if project.featured == true %}
-          <div class="col-md-4 wp4{% cycle '', ' delay-05s', ' delay-1s' %}">
-            <div class="overlay-effect effects clearfix">
-              <div class="img">
-                <img src="assets/img/portfolio/{{ project.thumbnail }}" alt="{{ project.title }}">
-                <div class="overlay">
-                  <a href="{{ project.link }}" class="expand" target="_blank"><i class="fa fa-search"></i><br>View Site</a>
-                  <a class="close-overlay hidden">x</a>
-                </div>
-              </div>
+      {% for project in site.projects reversed %}
+      {% if project.featured == true %}
+      <div class="col-md-4 featured">
+        <div class="overlay-effect effects clearfix">
+          <div class="img">
+            <img src="assets/img/portfolio/{{ project.thumbnail }}" alt="{{ project.title }}">
+            <div class="overlay">
+              <a href="{{ project.link }}" class="expand" target="_blank"><i class="fa fa-search"></i><br>View Site</a>
+              <a class="close-overlay hidden">x</a>
             </div>
-            <h2>{{ project.title }}</h2>
-            <p>
-              <time datetime="{{ project.date | date_to_xmlschema }}" class="date left-slide">
-                {{ project.date | date_to_string }}
-              </time>
-            </p>
-            <!-- <p>{{ project.company }}</p> -->
-            <p>{{ project.tech }}</p>
           </div>
-        {% endif %}
-        {% endfor %}
+        </div>
+        <h2>{{ project.title }}</h2>
+        <p>
+          <time datetime="{{ project.date | date_to_xmlschema }}" class="date left-slide">
+            {{ project.date | date_to_string }}
+          </time>
+        </p>
+        <!-- <p>{{ project.company }}</p> -->
+        <p>{{ project.tech }}</p>
       </div>
+      {% endif %}
+      {% endfor %}
     </div>
   </div>
 </section>
