Remove team styles and include
Also fix hero bg image

--- a/_scss/_features.scss
+++ b/_scss/_features.scss
@@ -2,8 +2,7 @@
 Features
 ========================================================================== */
 
-.features-wrapper,
-.team-wrapper {
+.features-wrapper {
   margin: 70px 0 0;
 }
 
