--- a/_scss/_hero.scss
+++ b/_scss/_hero.scss
@@ -1,12 +1,11 @@
 /* ==========================================================================
 Hero
 ========================================================================== */
-
 .hero {
-  background: rgba(0, 0, 0, 0);
+  background: #000 url('../assets/img/hero-bg.jpg') no-repeat center center;
   background-size: cover;
   box-sizing: border-box;
-  height: 100%;
+  height: auto;
   padding: 32px 0 150px 0;
   width: 100%;
 }
