--- a/_scss/_cta.scss
+++ b/_scss/_cta.scss
@@ -8,8 +8,8 @@ CTA
 }
 
 .ignite-btn {
-  border: solid 1px $white;
-  color: $white;
+  border: 1px solid currentColor;
+  color: #fff;
   display: inline-block;
   font-weight: bold;
   letter-spacing: 1px;
