--- a/_scss/_features.scss
+++ b/_scss/_features.scss
@@ -13,7 +13,7 @@ Features
 .icon {
   background: #3dc9b3;
   border-radius: 50%;
-  color: $white;
+  color: #fff;
   display: block;
   font-size: 55px;
   height: 175px;
