--- a/_scss/_global.scss
+++ b/_scss/_global.scss
@@ -55,7 +55,7 @@ h2::after {
 }
 
 .light-bg {
-  background-color: $white
+  background-color: #fff
 }
 
 .dark-box {
@@ -64,7 +64,7 @@ h2::after {
 }
 
 .light-box {
-  background-color: $white;
+  background-color: #fff;
   box-shadow: 0px 3px 0px 0px #f0f2f4;
   padding: 20px 0;
 }
