--- a/css/main.scss
+++ b/css/main.scss
@@ -8,10 +8,9 @@
  */
 
 /////////////////////////////
-// Helpers
+// Variables
 /////////////////////////////
 // @import "root";
-@import "vars";
 
 /////////////////////////////
 // Vendor Libraries
