--- a/_scss/_footer.scss
+++ b/_scss/_footer.scss
@@ -12,11 +12,11 @@ footer {
 }
 
 footer p {
-  color: $white;
+  color: #fff;
 }
 
 ul.legals {
-  color: $white;
+  color: #fff;
   line-height: 25px;
   list-style: none;
 }
