--- a/_scss/_portfolio.scss
+++ b/_scss/_portfolio.scss
@@ -45,8 +45,8 @@ Portfolio
 }
 
 a.close-overlay {
-  background-color: $black;
-  color: $white;
+  background-color: #000;
+  color: #fff;
   cursor: pointer;
   display: block;
   font-size: 20px;
@@ -66,7 +66,7 @@ a.close-overlay.hidden {
 }
 
 a.expand {
-  color: $white;
+  color: #fff;
   display: block;
   font-size: 14px;
   font-weight: 600;
