--- a/_scss/_subscribe.scss
+++ b/_scss/_subscribe.scss
@@ -10,7 +10,7 @@ Subscribe
 }
 
 .subscribe h1 {
-  color: $white;
+  color: #fff;
   margin-bottom: 40px;
 }
 
@@ -25,8 +25,8 @@ Subscribe
 
 .subscribe input[type=text] {
   background-color: rgba(255, 255, 255, 0.1);
-  border: solid 1px $white;
-  color: $white;
+  border: solid 1px #fff;
+  color: #fff;
   padding: 20px;
   width: 30%;
 }
@@ -34,7 +34,7 @@ Subscribe
 .subscribe input[type=submit] {
   background: rgba(61, 201, 179, 0.5);
   border: solid 1px rgba(61, 201, 179, 0.5);
-  color: $white;
+  color: #fff;
   letter-spacing: 1px;
   padding: 20px;
   text-transform: uppercase;
@@ -44,5 +44,5 @@ Subscribe
 .subscribe input[type=submit]:hover {
   background: rgba(61, 201, 179, 1);
   border: solid 1px rgba(61, 201, 179, 1);
-  color: $white;
+  color: #fff;
 }
