Fix font-stack with google font

--- a/_scss/_global.scss
+++ b/_scss/_global.scss
@@ -1,4 +1,11 @@
 /* ==========================================================================
+Font Stack
+========================================================================== */
+body {
+  font-family: "Varela Round", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+/* ==========================================================================
 Tables
 ========================================================================== */
 
