Move social nav to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,11 @@
         </ul>
       </div> -->
 
-      <div class="col-md-6 col-md-push-6 credit">
+      <div class="col-md-6">
+        {% include nav-social.html %}
+      </div>
+
+      <div class="col-md-6 credit">
         <p>Powered by Jekyll - &copy; {{ site.time | date: '%Y' }} {{ site.author }}</p>
       </div>
     </div>
