--- a/_scss/_queries.scss
+++ b/_scss/_queries.scss
@@ -1,22 +1,14 @@
 /* 320px (iPhone) */
-@media screen and (max-width:320px) {
-}
+@media screen and (max-width:320px) {}
 
 /* 480px (WVGA - Low End Windows Phone) */
 @media screen and (max-width:480px) {
-  .wrapper { background: #f3f5f8; height: 640px; }
-  .iphone { display: none; }
-  .fluid-white { display: none; }
-  .wp2, .wp5, .light-box { margin-bottom: 30px; }
-  .legals { text-align: center; margin: 0; padding: 0; }
-  .credit { text-align: center; }
+  .wrapper { height: 640px; }
 }
 
 /* xGA iPad */
 @media screen and (max-width:1024px) {
-  .wp3 { background-position: 50px 0; }
-  .swag { background-attachment: scroll; }
-  .subscribe { background-attachment: scroll; }
+  .swag, .subscribe { background-attachment: scroll; }
 }
 
 /* 1200px (Small Desktop, Netbook) */
@@ -26,10 +18,14 @@
 
 /* Bootstrap 990px Breakpoint to 480px */
 @media screen and (min-width:480px) and (max-width:991px) {
-  .iphone { display: none; }
-  .fluid-white { display: none; }
-  .wrapper { background: #f3f5f8; height: 540px; }
+  .wrapper { height: 540px; }
+}
+
+@media screen and (max-width:991px) {
+  .wrapper { background: #f3f5f8; }
+  .iphone, .fluid-white { display: none; }
   .wp2, .wp5, .light-box { margin-bottom: 30px; }
   .legals { text-align: center; margin: 0; padding: 0; }
-  .credit { text-align: center; }
+  .social-buttons { margin-bottom: 10px; }
+  .social-buttons, .credit { text-align: center; }
 }
