--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,23 +1,9 @@
 <section class="hero" id="hero">
   <div class="container">
-    {% comment %}
-    <div class="row">
-      <div class="col-md-12 text-right navicon">
-        <a id="nav-toggle" class="nav_slide_button" href="#"><span></span></a>
-      </div>
-    </div>
-    {% endcomment %}
-
     <div class="row">
       <div class="col-md-8 col-md-offset-2 text-center inner">
         <h1>NATHAN <span>JESSEN</span></h1>
-        <p>Front-end Developer specialized in CSS architecture and performance</p>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3 text-center">
-        <a href="#contact" class="learn-more-btn">Get in touch</a>
+        <p>Front-end Architect specializing in CSS development and performance optimization.</p>
       </div>
     </div>
   </div>
