Remove bootstrap grid in favor of flexboxgrid

--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -1,7 +1,7 @@
 <div class="ignite-cta text-center">
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-xs-12">
         <a href="{{ site.base_url }}projects/" class="ignite-btn">View All Projects</a>
       </div>
     </div>
