--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,7 +1,7 @@
 <section class="hero" id="hero">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-8 col-md-offset-2 text-center inner">
+  <div class="container-fluid">
+    <div class="row center-xs">
+      <div class="col-xs-12 col-md-8 text-center inner">
         <h1>NATHAN <span>JESSEN</span></h1>
         <p>Front-end Architect specializing in CSS development and performance optimization.</p>
       </div>
