--- a/_scss/_cta.scss
+++ b/_scss/_cta.scss
@@ -1,6 +1,6 @@
-/* ==========================================================================
+/**
 CTA
-========================================================================== */
+*/
 
 .ignite-cta {
   background-color: #242830;
