--- a/_scss/_queries.scss
+++ b/_scss/_queries.scss
@@ -24,7 +24,7 @@
 @media screen and (max-width:991px) {
   .wrapper { background: #f3f5f8; }
   .iphone, .fluid-white { display: none; }
-  .wp2, .wp5, .light-box { margin-bottom: 30px; }
+  .feature, .wp5, .light-box { margin-bottom: 30px; }
   .legals { text-align: center; margin: 0; padding: 0; }
   .social-buttons { margin-bottom: 10px; }
   .social-buttons, .credit { text-align: center; }
