--- a/_includes/features.html
+++ b/_includes/features.html
@@ -1,37 +1,33 @@
 <section class="features text-center section-padding" id="features">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h1 class="arrow">Love what you do, and you'll do it well</h1>
-        <div class="features-wrapper">
-          <div class="col-md-4 wp2">
-            <div class="icon">
-              <i class="fa fa-laptop shadow"></i>
-            </div>
-            <h2>Digital Design</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum
-            primis in faucibus.</p>
-          </div>
+  <div class="container-fluid">
+    <h1 class="arrow">Love what you do, and you'll do it well</h1>
 
-          <div class="col-md-4 wp2 delay-05s">
-            <div class="icon">
-              <i class="fa fa-code shadow"></i>
-            </div>
-            <h2>Web Development</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum
-            primis in faucibus.</p>
-          </div>
-
-          <div class="col-md-4 wp2 delay-1s">
-            <div class="icon">
-              <i class="fa fa-heart shadow"></i>
-            </div>
-            <h2>Creative Direction</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum
-            primis in faucibus.</p>
-          </div>
-          <div class="clearfix"></div>
+    <div class="row features-wrapper">
+      <div class="col-md-4 feature">
+        <div class="icon">
+          <i class="fa fa-laptop shadow"></i>
         </div>
+        <h2>Digital Design</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum
+        primis in faucibus.</p>
+      </div>
+
+      <div class="col-md-4 feature">
+        <div class="icon">
+          <i class="fa fa-code shadow"></i>
+        </div>
+        <h2>Web Development</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum
+        primis in faucibus.</p>
+      </div>
+
+      <div class="col-md-4 feature">
+        <div class="icon">
+          <i class="fa fa-heart shadow"></i>
+        </div>
+        <h2>Creative Direction</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum
+        primis in faucibus.</p>
       </div>
     </div>
   </div>
