--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,24 +1,14 @@
-<header id="home">
-  <nav id="nav-main" class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
-    <!-- <div class="container-fluid"> -->
-      <div class="row">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="{{ site.BASE_PATH }}" title="Back to Homepage">{{ site.title }}</a>
-      </div>
+<div class="container-fluid">
+  <header class="header row middle-xs">
+    <hgroup class="header__hgroup col-md-6">
+      <a href="{{ site.BASE_PATH }}" title="Back to Homepage">
+        <h1 class="header__title">{{ site.title }}</h1>
+        <h3 class="header__role">Front-end Architect</h3>
+      </a>
+    </hgroup>
 
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="main-nav">
-        {% include top-nav.html %}
-      </div>
-      </div>
-    </div>
-  </nav>
-</header>
+    <nav class="top-nav col-md-6 text-right">
+      <a href="{{ site.base_url }}projects/" {% if page.slug == "projects" %} class="active"{% endif %}>Projects</a>
+    </nav>
+  </header>
+</div>
