--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,9 +1,9 @@
 <section class="portfolio text-center section-padding" id="portfolio">
-  <div class="container">
-    <div class="row">
+  <div class="container-fluid">
+    <div class="row center-xs">
       {% for project in site.projects reversed %}
       {% if project.featured == true %}
-      <div class="col-md-4 featured">
+      <div class="col-sm-6 col-md-4 featured">
         <div class="overlay-effect effects clearfix">
           <div class="img">
             <img src="assets/img/portfolio/{{ project.thumbnail }}" alt="{{ project.title }}">
@@ -15,9 +15,7 @@
         </div>
         <h2>{{ project.title }}</h2>
         <p>
-          <time datetime="{{ project.date | date_to_xmlschema }}" class="date left-slide">
-            {{ project.date | date_to_string }}
-          </time>
+          <time datetime="{{ project.date | date_to_xmlschema }}" class="date left-slide">{{ project.date | date_to_string }}</time>
         </p>
         <!-- <p>{{ project.company }}</p> -->
         <p>{{ project.tech }}</p>
