--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -1,5 +1,5 @@
 <section class="subscribe text-center">
-  <div class="container">
+  <div class="container-fluid">
     <h1><i class="fa fa-paper-plane"></i><span>Subscribe to stay in the loop</span></h1>
     <form action="#">
       <input type="text" name="" value="" placeholder="example@mail.com" required>
