--- a/_includes/swag.html
+++ b/_includes/swag.html
@@ -1,7 +1,7 @@
 <section class="swag text-center">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-8 col-md-offset-2">
+  <div class="container-fluid">
+    <div class="row center-xs">
+      <div class="col-xs-12 col-md-8">
         <h1>View my featured works <span>more great sites launching soon</span></h1>
         <a href="#portfolio" class="down-arrow-btn"><i class="fa fa-chevron-down"></i></a>
       </div>
