--- a/_scss/_features.scss
+++ b/_scss/_features.scss
@@ -1,9 +1,9 @@
-/* ==========================================================================
+/**
 Features
-========================================================================== */
+*/
 
 .features-wrapper {
-  margin: 70px 0 0;
+  margin-top: 70px;
 }
 
 .shadow {
