--- a/_scss/_hero.scss
+++ b/_scss/_hero.scss
@@ -7,15 +7,15 @@ Hero
   background-size: cover;
   box-sizing: border-box;
   height: auto;
-  padding: 3rem 0 15rem 0;
+  padding: 2rem 0 9rem 0;
   width: 100%;
 }
 
 .hero h1 {
-  font-size: 4rem;
-  letter-spacing: 12px;
-  margin-bottom: 1rem;
-  margin-top: 1rem;
+  font-size: 2.5rem;
+  letter-spacing: 5px;
+  margin-bottom: .625rem;
+  margin-top: .625rem;
 }
 
 .hero h1 span {
