Simplify and fix layouts

--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -1,4 +1,4 @@
-<section id="responsive" class="responsive-services">
+<section class="latest-posts section-padding-small">
   <div class="container-fluid">
     <h2 class="text-center">Posts</h2>
 
