--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,5 +1,7 @@
-<section class="portfolio text-center section-padding" id="portfolio">
+<section class="portfolio text-center section-padding-small" id="portfolio">
   <div class="container-fluid">
+    <h2 class="text-center">Featured Projects</h2>
+
     <div class="row center-xs">
       {% for project in site.projects reversed %}
       {% if project.featured == true %}
