--- a/_scss/_contact.scss
+++ b/_scss/_contact.scss
@@ -1,6 +1,6 @@
-/* ==========================================================================
+/**
 Contact
-========================================================================== */
+*/
 
 .up-btn {
   background: rgba(61, 201, 179, 0.5);
