--- a/_scss/_global.scss
+++ b/_scss/_global.scss
@@ -62,6 +62,10 @@ h2::after {
   padding: 90px 0 100px
 }
 
+.section-padding-small {
+  padding: 30px 0 50px;
+}
+
 .dark-bg {
   background: #f3f5f8
 }
