--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,13 @@
 <div class="container-fluid">
-  <header class="header row middle-xs">
-    <hgroup class="header__hgroup col-md-6">
+  <header class="header row center-xs start-md middle-xs">
+    <hgroup class="header__hgroup col-xs-12 col-md-6">
       <a href="{{ site.BASE_PATH }}" title="Back to Homepage">
         <h1 class="header__title">{{ site.title }}</h1>
         <h3 class="header__role">Front-end Architect</h3>
       </a>
     </hgroup>
 
-    <nav class="top-nav col-md-6 text-right">
+    <nav class="top-nav col-xs-12 col-md-6">
       <a href="{{ site.base_url }}projects/" {% if page.slug == "projects" %} class="active"{% endif %}>Projects</a>
     </nav>
   </header>
