--- a/_scss/_header.scss
+++ b/_scss/_header.scss
@@ -4,6 +4,8 @@ Header
 
 .header {
   border-bottom: 1px solid #ccc;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
 }
 
 .header__hgroup {
@@ -13,12 +15,12 @@ Header
 .header__title {
   font-size: 2.25rem;
   margin-bottom: 0;
-  margin-top: 1rem;
+  margin-top: 0;
 }
 
 .header__role {
   font-size: 1.125rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0;
   margin-top: 0;
 }
 
@@ -26,5 +28,16 @@ Header
   a:hover,
   a:focus {
     text-decoration: none;
+  }
+}
+
+@media screen and (max-width:991px) {
+  .top-nav {
+    margin-top: 1.5rem;
+  }
+}
+@media screen and (min-width:992px) {
+  .top-nav {
+    text-align: right;
   }
 }
