Update gulp and its packages. Clean up assets
Update dev dependencies and update gulp file to fix errors with running
jekyll and gulp at the same time. Gulp will now serve local site using
child process.
Reduce number of assets by concatenating several files.

--- a/_includes/head-slides.html
+++ b/_includes/head-slides.html
@@ -7,9 +7,7 @@
   {{ page.title }} | {{ site.title }}
 </title>
 
-<link href="{{ site.base_url }}assets/css/reveal.css" rel="stylesheet">
-<link href="{{ site.base_url }}assets/css/beige.css" rel="stylesheet">
-<!-- <link href="{{ site.base_url }}assets/vendors/highlight/styles/foundation.css" rel="stylesheet"> -->
+<link href="{{ site.base_url }}assets/css/reveal.beige.css" rel="stylesheet">
 <script src="{{ site.base_url }}assets/js/reveal.min.js"></script>
 
 {% comment %} Google Analytics {% endcomment %}
