--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,9 @@
 
     {% include footer.html %}
 
-    <!-- JS and analytics only. -->
+    {% comment %}
+    JS and analytics only
+    {% endcomment %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="{{ site.base_url }}assets/js/main.min.js"></script>
   </body>
