--- a/_scss/_hero.scss
+++ b/_scss/_hero.scss
@@ -3,7 +3,7 @@ Hero
 */
 
 .hero {
-  background: #000 url('../assets/img/hero-bg.jpg') no-repeat center center;
+  background: #000 url('../img/hero-bg.jpg') no-repeat center center;
   background-size: cover;
   box-sizing: border-box;
   height: auto;
