--- a/_scss/_swag.scss
+++ b/_scss/_swag.scss
@@ -3,7 +3,7 @@ Swag
 ========================================================================== */
 
 .swag {
-  background: url('../assets/img/keyboard-bg.jpg') no-repeat center center;
+  background: url('../img/keyboard-bg.jpg') no-repeat center center;
   background-attachment: fixed;
   background-size: cover;
   padding: 50px 0;
