Replace font awesome with custom fontello download
Reduce number of calls to separate site for font file and css to get
font awesome while also reducing number of icons

--- a/_includes/features.html
+++ b/_includes/features.html
@@ -5,7 +5,7 @@
     <div class="row features-wrapper">
       <div class="col-md-4 feature">
         <div class="icon">
-          <i class="fa fa-laptop shadow"></i>
+          <i class="icon-laptop shadow"></i>
         </div>
         <h2>Digital Design</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum
@@ -14,7 +14,7 @@
 
       <div class="col-md-4 feature">
         <div class="icon">
-          <i class="fa fa-code shadow"></i>
+          <i class="icon-code shadow"></i>
         </div>
         <h2>Web Development</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum
@@ -23,7 +23,7 @@
 
       <div class="col-md-4 feature">
         <div class="icon">
-          <i class="fa fa-heart shadow"></i>
+          <i class="icon-heart shadow"></i>
         </div>
         <h2>Creative Direction</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum
