--- a/_includes/nav-social.html
+++ b/_includes/nav-social.html
@@ -1,26 +1,26 @@
 <nav class="social-buttons">
   {% if site.githubs %}<a href="{{ site.githubs }}" target="_blank" class="social-btn">
-    <i class="fa fa-github"></i><span class="sr-only">GitHub</span>
+    <i class="icon-github-circled"></i><span class="sr-only">GitHub</span>
   </a>{% endif %}
   {% if site.twitter %}<a href="{{ site.twitter }}" target="_blank" class="social-btn">
-    <i class="fa fa-twitter"></i><span class="sr-only">Twitter</span>
+    <i class="icon-twitter"></i><span class="sr-only">Twitter</span>
   </a>{% endif %}
   {% if site.medium %}<a href="{{ site.medium }}" target="_blank" class="social-btn">
-    <i class="fa fa-medium"></i><span class="sr-only">Medium</span>
+    <i class="icon-medium"></i><span class="sr-only">Medium</span>
   </a>{% endif %}
   {% if site.linkedin %}<a href="{{ site.linkedin }}" target="_blank" class="social-btn">
-    <i class="fa fa-linkedin"></i><span class="sr-only">LinkedIn</span>
+    <i class="icon-linkedin"></i><span class="sr-only">LinkedIn</span>
   </a>{% endif %}
   {% if site.gplus %}<a href="{{ site.gplus }}" target="_blank" class="social-btn">
-    <i class="fa fa-google-plus"></i><span class="sr-only">Google Plus</span>
+    <i class="icon-gplus"></i><span class="sr-only">Google Plus</span>
   </a>{% endif %}
   {% if site.instagram %}<a href="{{ site.instagram }}" target="_blank" class="social-btn">
-    <i class="fa fa-instagram"></i><span class="sr-only">Instagram</span>
+    <i class="icon-instagram"></i><span class="sr-only">Instagram</span>
   </a>{% endif %}
   {% if site.dribbble %}<a href="{{ site.dribbble }}" target="_blank" class="social-btn">
-    <i class="fa fa-dribbble"></i><span class="sr-only">Dribbble</span>
+    <i class="icon-dribbble"></i><span class="sr-only">Dribbble</span>
   </a>{% endif %}
   {% if site.angellist %}<a href="{{ site.angellist }}" target="_blank" class="social-btn">
-    <i class="fa fa-angellist"></i><span class="sr-only">AngelList</span>
+    <i class="icon-angellist"></i><span class="sr-only">AngelList</span>
   </a>{% endif %}
 </nav>
