--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,5 +1,5 @@
 <section class="dark-bg text-center section-padding contact-wrap" id="contact">
-  <a href="#top" class="up-btn"><i class="fa fa-chevron-up"></i></a>
+  <a href="#top" class="up-btn"><i class="icon-angle-circled-up"></i></a>
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12">
@@ -11,7 +11,7 @@
       {% if site.location %}
       <div class="col-xs-12 col-sm-6">
         <div class="light-box box-hover">
-          <h2><i class="fa fa-map-marker"></i><span>Location</span></h2>
+          <h2><i class="icon-location"></i><span>Location</span></h2>
           <p>{{ site.location }}</p>
         </div>
       </div>
@@ -20,7 +20,7 @@
       {% if site.email %}
       <div class="col-xs-12 col-sm-6">
         <div class="light-box box-hover">
-          <h2><i class="fa fa-paper-plane"></i><span>Email</span></h2>
+          <h2><i class="icon-paper-plane"></i><span>Email</span></h2>
           <p><a href="mailto:{{ site.email }}">{{ site.email }}</a></p>
         </div>
       </div>
