--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -10,7 +10,7 @@
           <div class="img">
             <img src="assets/img/portfolio/{{ project.thumbnail }}" alt="{{ project.title }}">
             <div class="overlay">
-              <a href="{{ project.link }}" class="expand" target="_blank"><i class="fa fa-search"></i><br>View Site</a>
+              <a href="{{ project.link }}" class="expand" target="_blank"><i class="icon-search"></i><br>View Site</a>
               <a class="close-overlay hidden">x</a>
             </div>
           </div>
